--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>ToDoList</h1>
 	    <form class="add-task">
-		    <input type="text" name="content" placeholder="记得吃饭" autocomplete="off">
+		    <input type="text" name="content" placeholder="e.g.记得吃饭" autocomplete="off" autofocus="autofocus">
 		    <button type="submit" id="submit">submit</button>
 		</form>
 		<div class="task-list">
