--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link href="https://cdn.bootcss.com/normalize/7.0.0/normalize.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/demo.css">
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://www.bootcdn.cn/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdn.staticfile.org/store.js/1.3.20/store.min.js"></script>
 	<script type="text/javascript" src="js/demo.js"></script>
 </head>
